# PTT

./: .coveragerc  .gitignore  CHANGELOG.md  Makefile  README.md  cli.py  example.py  handlers.py  parse.py  pyproject.toml  pyrightconfig.json  transformers.py
.github/workflows/: battery.yml  release-please.yml
PTT/: __init__.py  adult.py  anime.py  cli.py  handlers.py  parse.py  transformers.py
PTT/keywords/: combined-keywords.txt  short-adult-compound-words.txt  short-adult-words.txt
tests/: test_adult.py  test_anime.py  test_audio.py  test_codec.py  test_collection.py  test_container.py  test_convert.py  test_date.py  test_dubbed.py  test_edition.py  test_episode_code.py  test_episodes.py  test_extended.py  test_extras.py  test_group.py  test_hardcoded.py  test_hdr.py  test_language.py  test_main.py  test_network.py  test_parser.py  test_proper.py  test_quality.py  test_region.py  test_remastered.py  test_repack.py  test_resolution.py  test_retail.py  test_season.py  test_site.py  test_size.py  test_source.py  test_sports.py  test_title.py  test_trash.py  test_unrated.py  test_volume.py  test_year.py
