[tool.poetry]
name = "parsett"
version = "1.3.0"
description = "PTT"
authors = ["Dreu LaVelle <dreu.lavelle@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2023.12.25"
arrow = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.352"
pyperf = "^2.2.0"
ruff = "^0.3.0"
isort = "^5.10.1"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
codecov = "^2.1.13"
coverage = "^7.4.4"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "PTT"

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.isort]
profile = "black"

[tool.black]
line-length = 300
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests
)/
'''
