[project]
name = "parsett"
version = "1.8.4"
description = "Parsett - Torrent Parser with Adult Content Detection"
authors = [{ name = "Dreu LaVelle", email = "dreu.lavelle@gmail.com" }]
requires-python = ">=3.10,<4"
license = "MIT"
dependencies = [
    "arrow>=1.3.0,<2",
    "regex>=2025.10.23,<2026",
]

[project.scripts]
parsett = "PTT.cli:main"
ptt = "PTT.cli:main"

[dependency-groups]
dev = [
    "pyperf>=2.2.0,<3",
    "ruff>=0.3.0,<0.4",
    "isort>=5.10.1,<6",
    "pytest>=8.1.1,<9",
    "pytest-cov>=5.0.0,<6",
    "codecov>=2.1.13,<3",
    "coverage>=7.4.4,<8",
    "black>=24.4.2,<25",
    "pytest-xdist>=3.6.1,<4",
]

[tool.uv]
package = true

[tool.hatch.build.targets.sdist]
include = ["PTT"]

[tool.hatch.build.targets.wheel]
include = ["PTT"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
omit = ["*/PTT/anime.py"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.isort]
profile = "black"

[tool.black]
line-length = 300
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests
)/
'''
